<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">usercenterlib</string>
    <string name="stringMsgCenterTips">Important information reminder!</string>
    <string name="stringMsgCenterTipsBtn">Turn on</string>
    <string name="stringMsgCenterMsgNotify">Message</string>
    <string name="stringRegister">Login/Register</string>
    <string name="stringWordCount">Learned Words</string>
    <string name="stringStickDays">Day Streak</string>
    <string name="stringStartEvaluationError">Evaluation page open failure!</string>
    <string name="stringAchievementTitleOfLearning">Learning reward</string>
    <string name="stringAchievementTitleOfXP">XP reward</string>
    <string name="stringRewardItemTitle">Learning reward</string>
    <string name="stringRewardItemHeartTitle">HEART</string>
    <string name="stringRewardItemLightningTitle">LIGHTNING</string>
    <string name="stringRewardItemXPTitle">XP</string>
    <string name="stringLoginTipsOfRanking">Login to check my ranking</string>
    <string name="stringShareTipsOfInviteFriends">Each time to invite a friend, to get one day of VIP free trial!</string>
    <string name="stringShareTipsOfFriends">Invite friends to have more fun!</string>
    <string name="stringInviteBtnOfFriends">INVITE FRIENDS</string>
    <string name="stringInvitationEditHint">Fill your invitation code to get free trial</string>
    <string name="stringInvitationBtn">ACCEPT INVITATION</string>
    <string name="stringInviteBtnOfFacebook">FACEBOOK</string>
    <string name="stringInviteBtnOfMessenger">MESSENGER</string>
    <string name="stringSetUpLearningReminder">Learning reminder</string>
    <string name="stringSetUpResetPwd">Reset password</string>
    <string name="stringSetUpVer">version:%s</string>
    <string name="stringSetUpExit">LOG OFF</string>
    <string name="stringContactHint">Please enter your email</string>
    <string name="stringProblemDescHint">Please type your suggestions, error reports and new ideas here, we will review all feedback.</string>
    <string name="stringSubmit">Submit</string>
    <string name="stringMaxImageCount">Maximum %s photos</string>
    <string name="stringFeedbackSubmitSuccess">Thanks for your feedback</string>
    <string name="stringSignOrLog">Sign up/Log in</string>
    <string name="stringOn">ON</string>
    <string name="stringOff">OFF</string>
    <string name="stringSun">Sun</string>
    <string name="stringMon">Mon</string>
    <string name="stringTue">Tue</string>
    <string name="stringWed">Wed</string>
    <string name="stringThu">Thu</string>
    <string name="stringFri">Fri</string>
    <string name="stringSat">Sat</string>
    <string name="stringCallEmailTips">You can also send an email to %s official email address %s. Looking forward your feedback.</string>
    <string name="stringCallFacebookTips">Facebook Pages</string>
    <string name="stringCopyEmailSuccess">Copy email to clipboard successfully</string>
    <string name="stringCopyEmailFailed">Failed to copy mailbox to clipboard</string>
    <string name="stringMeBuyVip">Upgrade</string>
    <string name="stringView">view</string>
    <string name="stringUserId">ID:%s</string>
    <string name="stringFreeTrial">VIP free trial in use</string>
    <string name="stringInviteCode">Invitation code：%s</string>
    <string name="stringUserPlanOfLearnt">Learnt:</string>
    <string name="stringUserPlanOfWords">words |</string>
    <string name="stringUserPlanOfDays">days</string>
    <string name="stringUpgradeOfNotVip">Become our member to enjoy premium rights</string>
    <string name="stringUpgradeOfFreeVip">Click for free member-ship trial</string>
    <string name="stringVipTime">VIP: %s-%s</string>
    <string name="stringHaveRanking">YOU HAVE CLIMBED THE LIST</string>
    <string name="stringRankingPodiumNum1">1</string>
    <string name="stringRankingPodiumNum2">2</string>
    <string name="stringRankingPodiumNum3">3</string>
    <string name="stringInviteFriendsTitle">Invite friends to experience Premium rights for free!</string>
    <string name="stringInviteFriendsContent">Invite a friend to register each time will get one-day exclusive membership. \nGet more fun to learn friends now</string>
    <string name="stringNotFriends">Your friend is still out of door, come to invite them now!</string>
    <string name="stringRankingNotMeOfUser">Earn XP to climb the list！</string>
    <string name="stringRankingLock">Reach 20xp this week to unlock Weekly Race</string>
    <string name="stringVouchersTableOfUnused">Unused</string>
    <string name="stringVouchersTableOfInUse">In use</string>
    <string name="stringVouchersTableOfExpired">Expired</string>
    <string name="stringVouchersOfNotUnused">No available vouchers, invite friends to get more rewards!</string>
    <string name="stringVouchersOfNotInUse">You are not currently using any vouchers.</string>
    <string name="stringVouchersOfNotExpired">Not available.</string>
    <string name="stringVouchersUnusedRewardsStack">Rewards can be stacked.</string>
    <string name="stringVouchersInUseValidTime">VALID TIME</string>
    <string name="stringMeInvitationCodeContent">Every time you invite a friend to sign up, you will receive a notification that you have a free trial membership.If not, send the invitation code to the friend you invited, and the friend will fill in the code and accept the invitation.You can gain the membership award successfully.</string>
    <string name="stringDefaultInvitationCode">Fill your invitation code to get free trial</string>
    <string name="stringIncorrectInvitationCode">Incorrect invitation code</string>
    <string name="stringInviteCodeCopySuccess">Invitation code copied successfully</string>
    <string name="stringInviteCodeCopyFailed">Invitation code replication failed</string>
    <string name="stringUserIdCopySuccess">Id copied successfully</string>
    <string name="stringUserIdCopyFailed">Id replication failed</string>
    <string name="stringInteractiveLike">This comment</string>
    <string name="stringAll">All</string>
    <string name="stringIntegralNotDataTips">You haven’t earned points yet</string>
    <string name="stringThisMonth">This month</string>
    <string name="stringIntegralDetails">Points details</string>
    <string name="stringIntegralPointsEarned">Points earned</string>
    <string name="stringIntegralPointsRedeem">Points Redeem</string>
    <string name="stringIntegralPointsTitleInvite">Invite courteous</string>
    <string name="stringIntegralPointsTitleVip">Member points doubled</string>
    <string name="stringIntegralPointsTitleEnergyRedeem">Energy Redeem</string>
    <string name="stringIntegralPointsContentInvite">Successfully invite friends, both sides get points</string>
    <string name="stringIntegralPointsContentVip">Become a member and get more points</string>
    <string name="stringIntegralPointsContentEnergyRedeem">5 points can be exchanged for one energy</string>
    <string name="stringIntegralPointsBtnInvite">TO INVITE</string>
    <string name="stringIntegralPointsBtnVip">BUY NOW</string>
    <string name="stringIntegralPointsBtnEnergyRedeem">REDEEM</string>
    <string name="stringIntegralExchangeSuccess">Exchange successful</string>
    <string name="stringIntegralExchangeFailure">Exchange failure</string>
    <string-array name="stringIntegralType">
        <item>All</item>
        <item>Use</item>
        <item>Get</item>
    </string-array>
</resources>
