<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <Space
        android:id="@+id/toolbar_height_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.gjjy.basiclib.widget.Toolbar
        android:id="@+id/feedback_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarTitle="@string/stringFeedback"
        app:toolbarOtherBtn="@string/stringSubmit"/>

    <com.ybear.ybcomponent.widget.shape.ShapeFrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:shapeRadius="10dp"
        app:shapeBorderSize="2dp"
        app:shapeBorderColor="@color/colorEF"
        android:background="@color/colorWhite"
        android:layout_marginTop="24dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp">
        <EditText
            android:id="@+id/feedback_et_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/color33"
            android:hint="@string/stringContactHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="1024"
            android:background="@null"
            android:gravity="center_vertical"
            android:padding="19dp"
            android:importantForAutofill="no" />
    </com.ybear.ybcomponent.widget.shape.ShapeFrameLayout>

    <com.ybear.ybcomponent.widget.shape.ShapeFrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:shapeRadius="10dp"
        app:shapeBorderSize="2dp"
        app:shapeBorderColor="@color/colorEF"
        android:background="@color/colorWhite"
        android:layout_marginTop="25dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp">
        <EditText
            android:id="@+id/feedback_et_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/color33"
            android:hint="@string/stringProblemDescHint"
            android:inputType="textMultiLine"
            android:maxLength="10240"
            android:background="@null"
            android:gravity="start"
            android:padding="19dp"
            android:importantForAutofill="no" />
    </com.ybear.ybcomponent.widget.shape.ShapeFrameLayout>

    <com.gjjy.basiclib.widget.CollectImagesView
        android:id="@+id/feedback_civ_add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"/>

    <TextView
        android:id="@+id/feedback_tv_max_img_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringMaxImageCount"
        android:textSize="14sp"
        android:textColor="@color/color66"
        android:layout_marginTop="14dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"/>

    <TextView
        android:id="@+id/feedback_tv_call_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/stringCallEmailTips"
        android:textSize="14sp"
        android:textColor="@color/color66"
        android:layout_marginTop="19dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:clickable="true"/>

    <TextView
        android:id="@+id/feedback_tv_call_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringCallFacebookTips"
        android:textSize="14sp"
        android:textColor="@color/colorCanTouch"
        android:layout_marginTop="15dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:clickable="true"/>

</LinearLayout>