<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:gravity="center_horizontal">

    <Space
        android:id="@+id/toolbar_height_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.gjjy.basiclib.widget.Toolbar
        android:id="@+id/invite_friends_tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ic_invite_friends_bg"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringInviteFriendsTitle"
            android:textColor="@color/colorMain"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="111dp"
            android:layout_marginBottom="26dp"
            android:layout_marginStart="62dp"
            android:layout_marginEnd="62dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringInviteFriendsContent"
            android:textColor="@color/color99"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginStart="74dp"
            android:layout_marginEnd="74dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/invite_friends_tv_facebook_btn"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:text="@string/stringInviteBtnOfFacebook"
            android:textSize="18sp"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:background="@drawable/ic_touch_skip_btn"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:clickable="true"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/invite_friends_tv_messenger_btn"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:text="@string/stringInviteBtnOfMessenger"
            android:textSize="18sp"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:background="@drawable/ic_touch_skip_btn"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:clickable="true"
            android:visibility="visible"/>
    </LinearLayout>



</LinearLayout>