<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="205dp"
    android:orientation="horizontal"
    android:gravity="bottom"
    android:baselineAligned="false"
    android:clipChildren="false">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipChildren="false">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ranking_podium_2"
            android:contentDescription="@string/stringNull"
            android:scaleType="fitXY"
            android:layout_gravity="bottom"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp">
            <include
                android:id="@+id/ranking_inc_ll_top_ranking_2"
                layout="@layout/item_user_photo"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/ranking_tv_top_ranking_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100XP"
                android:textColor="@color/colorTopRankingXP"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringRankingPodiumNum2"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipChildren="false">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ranking_podium_1"
            android:contentDescription="@string/stringNull"
            android:scaleType="fitXY"
            android:layout_gravity="bottom"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|top"
            android:layout_gravity="center_horizontal|top">
            <include
                android:id="@+id/ranking_inc_ll_top_ranking_1"
                layout="@layout/item_user_photo"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/ranking_tv_top_ranking_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100XP"
                android:textColor="@color/colorTopRankingXP"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringRankingPodiumNum1"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipChildren="false">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ranking_podium_3"
            android:contentDescription="@string/stringNull"
            android:scaleType="fitXY"
            android:layout_gravity="bottom" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal|top"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">
            <include
                android:id="@+id/ranking_inc_ll_top_ranking_3"
                layout="@layout/item_user_photo"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/ranking_tv_top_ranking_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100XP"
                android:textColor="@color/colorTopRankingXP"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringRankingPodiumNum3"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>